<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/iglesia">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:background="@drawable/transparent_bg"
        android:layout_gravity="center_vertical"
        tools:context="com.nansoft.mipuribus.activity.ContactoActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/insReport"
            android:textColor="#FFF"
            android:textSize="18dp"
            android:layout_marginBottom="10dp"/>

        <Spinner
            style="@style/spnrCustom"
            android:id="@+id/spnrTipoReporte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/tipo_reportes"
            android:layout_marginBottom="10dp"
            android:foreground="#ffffff" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/insDesReport"
            android:textSize="18dp"
            android:textColor="#FFF"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/edtDescripcion"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:minLines="4"
            android:gravity="top|left"
            android:textColor="@android:color/white"
            android:maxLines="10"
            android:scrollbars="vertical"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/insEnviar"
            android:textColor="@android:color/white"
            android:background="#009688"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnRestablecer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/insReset"
            android:textColor="@android:color/white"
            android:background="#D32F2F"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/insReports"
            android:textSize="13dp"
            android:textColor="#FFF"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

</ScrollView>